// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComplianceScore returns 1`] = `
<DocumentFragment>
  <p
    class=""
    data-ouia-component-id="OUIA-Generated-Text-1"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    <span>
      <svg
        aria-hidden="true"
        fill="var(--pf-global--danger-color--100)"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
       40%
    </span>
  </p>
</DocumentFragment>
`;

exports[`ComplianceScore returns no error without testResultProfiles 1`] = `
<DocumentFragment>
  N/A
</DocumentFragment>
`;

exports[`FailedRules returns 1`] = `
<SystemLink
  id="d5bc2459-21ce-4d11-bc0b-03ea7513dfa6"
>
  28
</SystemLink>
`;

exports[`FailedRules returns no error without testResultProfiles 1`] = `
<SystemLink
  id="d5bc2459-21ce-4d11-bc0b-03ea7513dfa6"
>
  N/A
</SystemLink>
`;

exports[`LastScanned returns 1`] = `
<DocumentFragment>
  <span>
    4 years ago
  </span>
</DocumentFragment>
`;

exports[`LastScanned returns NEVER 1`] = `
<DocumentFragment>
  <div>
    <svg
      aria-hidden="true"
      fill="var(--pf-global--warning-color--100)"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 576 512"
      width="1em"
    >
      <path
        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      />
    </svg>
     Never
  </div>
</DocumentFragment>
`;

exports[`LastScanned returns no error without testResultProfiles 1`] = `
<DocumentFragment>
  <div>
    <svg
      aria-hidden="true"
      fill="var(--pf-global--warning-color--100)"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 576 512"
      width="1em"
    >
      <path
        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      />
    </svg>
     Never
  </div>
</DocumentFragment>
`;

exports[`Name returns 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    demo.example.com
  </div>
</DocumentFragment>
`;

exports[`Policies returns 1`] = `
<DocumentFragment>
  <span
    class="ins-c-truncate is-inline"
    widget-type="InsightsTruncateInline"
  >
    HIPAA Policy
  </span>
</DocumentFragment>
`;

exports[`Policies returns without error without policies 1`] = `<DocumentFragment />`;

exports[`SSGVersion returns 1`] = `
<DocumentFragment>
  <span
    style="display: inline-block;"
  >
    <span
      class="pf-u-mr-xs"
      style="cursor: pointer;"
    >
      <svg
        aria-hidden="true"
        fill="var(--pf-global--warning-color--100)"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 576 512"
        width="1em"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
    </span>
    Not available
  </span>
</DocumentFragment>
`;

exports[`SSGVersion returns no error without testResultProfiles 1`] = `
<DocumentFragment>
  <span
    style="display: inline-block;"
  >
    <span
      class="pf-u-mr-xs"
      style="cursor: pointer;"
    >
      <svg
        aria-hidden="true"
        fill="var(--pf-global--warning-color--100)"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 576 512"
        width="1em"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
    </span>
    Not available
  </span>
</DocumentFragment>
`;
